--- a/.gitignore
+++ b/.gitignore
@@ -489,7 +489,7 @@ fabric.properties
 
 # End of https://www.toptal.com/developers/gitignore/api/csharp,rider,dotnetcore
 
-Client/bin/*
-Client/obj/*
-Server/bin/*
-Server/obj/*
+*/Client/bin/*
+*/Client/obj/*
+*/Server/bin/*
+*/Server/obj/*
