--- a/SeniorProj/Server/Dockerfile
+++ b/SeniorProj/Server/Dockerfile
@@ -8,13 +8,13 @@ WORKDIR /src
 COPY ["Server/SeniorProj.Server.csproj", "Server/"]
 COPY ["Client/SeniorProj.Client.csproj", "Client/"]
 COPY ["Shared/SeniorProj.Shared.csproj", "Shared/"]
-RUN dotnet restore "Server/SeniorProj.Server.csproj"
+RUN dotnet restore 
 COPY . .
 WORKDIR "/src/Server"
-RUN dotnet build "SeniorProj.Server.csproj" -c Release -o /app/build
+RUN dotnet build  -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "SeniorProj.Server.csproj" -c Release -o /app/publish
+RUN dotnet publish  -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
