added dotnet restore

--- a/SeniorProj/Server/Dockerfile
+++ b/SeniorProj/Server/Dockerfile
@@ -6,7 +6,7 @@ EXPOSE 443
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
 
-
+RUN dotnet restore -nowarn:msb3202,nu1503
 COPY . .
 WORKDIR "/src/Server"
 RUN dotnet build  -c Release -o /app/build
