Removed all paths

--- a/SeniorProj/Server/Dockerfile
+++ b/SeniorProj/Server/Dockerfile
@@ -5,14 +5,14 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["Server/SeniorProj.Server.csproj", "Server/"]
-RUN dotnet restore "Server/SeniorProj.Server.csproj"
+
+RUN dotnet restore 
 COPY . .
 WORKDIR "/src/Server"
-RUN dotnet build "SeniorProj.Server.csproj" -c Release -o /app/build
+RUN dotnet build  -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "SeniorProj.Server.csproj" -c Release -o /app/publish
+RUN dotnet publish  -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
