--- a/SeniorProj/Server/Dockerfile
+++ b/SeniorProj/Server/Dockerfile
@@ -7,7 +7,7 @@ FROM mcr.microsoft.com/dotnet/sdk:6.0 as build-env
 WORKDIR /src
 COPY src/*.csproj .
 RUN dotnet restore
-COPY src .
+COPY . .
 RUN dotnet publish -c Release -o /publish
 
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 as runtime
