--- a/SeniorProj/Server/Dockerfile
+++ b/SeniorProj/Server/Dockerfile
@@ -5,7 +5,8 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 as build-env
 WORKDIR /src
-RUN dotnet restore
+COPY ["Server/SeniorProj.Server.csproj", "Server/"]
+RUN dotnet restore "Server/SeniorProj.Server.csproj"
 COPY . .
 RUN dotnet publish -c Release -o /publish
 
