--- a/SeniorProj/Server/Dockerfile
+++ b/SeniorProj/Server/Dockerfile
@@ -1,16 +1,9 @@
-﻿FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
-WORKDIR /app
-EXPOSE 80
-EXPOSE 443
-
-FROM mcr.microsoft.com/dotnet/sdk:6.0 as build-env
+﻿FROM mcr.microsoft.com/dotnet/sdk:6.0 AS publish
 WORKDIR /src
-COPY ["Server/SeniorProj.Server.csproj", "Server/"]
-RUN dotnet restore "Server/SeniorProj.Server.csproj"
 COPY . .
-RUN dotnet publish -c Release -o /publish
+RUN dotnet publish -c Release -o /app/publish
 
-FROM mcr.microsoft.com/dotnet/aspnet:6.0 as runtime
-WORKDIR /publish
-COPY --from=build-env /publish .
+FROM mcr.microsoft.com/dotnet/aspnet:6.0 as final
+WORKDIR /app
+COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "SeniorProj.Server.dll"]
