--- a/SeniorProj/Server/SeniorProj.Server.csproj
+++ b/SeniorProj/Server/SeniorProj.Server.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
@@ -23,6 +23,12 @@
   <ItemGroup>
     <ProjectReference Include="..\Client\SeniorProj.Client.csproj" />
     <ProjectReference Include="..\Shared\SeniorProj.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="..\.dockerignore">
+      <Link>.dockerignore</Link>
+    </Content>
   </ItemGroup>
 
 
