--- a/SeniorProj/Server/appsettings.Development.json
+++ b/SeniorProj/Server/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "UserDbContext" : "Data Source=users.db"
   }
 }
