--- a/SeniorProj/Dockerfile
+++ b/SeniorProj/Dockerfile
@@ -19,4 +19,8 @@ RUN dotnet publish "SeniorProj.Server.csproj" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+
+COPY ["Server/users.db", "/app"]
+COPY ["Server/users.db", "/app/publish"]
+
 ENTRYPOINT ["dotnet", "SeniorProj.Server.dll"]
