--- a/SeniorProj/Server/appsettings.json
+++ b/SeniorProj/Server/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "UserDbContext" : "Data Source=SeniorProj/Sever/users.db"
+    "UserDbContext" : "Data Source=users.db"
   }
 }
